# code_reviewr_ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml
src/: main.py
src/core/: api.py  schemas.py  settings.py
src/integrations/: chatgpt.py  github.py
src/tests/: test_api.py
src/tests/test_integrations/: test_chatgpt.py  test_github.py
src/utils/: __init__.py  async_iterator.py  prompts.py
