[tool.poetry]
name = "ai code reviewer"
version = "0.1.0"
description = ""
authors = ["BRANYA43 <tbd2504@gmai.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.3"}
httpx = "^0.27.2"
pydantic-settings = "^2.6.0"
redis = "^5.2.0"
uvicorn = "^0.32.0"
openai = "^1.52.2"
g4f = {extras = ["all"], version = "^0.3.3.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-lazy-fixtures = "^1.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
force-exclude = true
extend-exclude = ['migrations']
lint.extend-select = ['T20']


[tool.ruff.format]
quote-style = "single"


[tool.mypy]
ignore_missing_imports = true
